Добавить зависимости  для работы с безопасностью и email, а также dockerfile и docker compose